--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ p {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  border-radius: 4px; 
 }
 
 .icon-close {
@@ -311,6 +311,58 @@ p {
   border: 0;
   cursor: pointer;
 }
+.modal-field {
+  
+  width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+.form-modal {
+  
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.form-modal label {
+  margin-bottom: 4px;
+}
+.form-modal input {
+ padding-left: 12px;
+ margin: 0;
+ padding: 0;
+border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+}
+
+.form-modal:hover input {
+  border: 1px solid #2196F3;
+}
+
+.form-modal textarea::placeholder {
+
+  
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+.comment {
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-icon {
+  display: flex;
+  margin-left: 12px;
+  
+  fill: #000000;
+  
+}
+
 /*  Section  */
 
 .phone-text {
