--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ p {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
-
+  padding-bottom: 0;
   min-height: 581px;
   min-width: 528px;
 
@@ -311,36 +311,87 @@ p {
   border: 0;
   cursor: pointer;
 }
+.form-text {
+  
+  width: 100%;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  
+  color: #212121;
+}
+
+.agree-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+agree-text::before {
+  content: "";
+  display: flex;
+  border: 0.2px solid #FFFFFF;
+  border-color: rgba(33, 33, 33, 1);
+  width: 16px;
+  height: 15px;
+  
+}
+.bluetext {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
 .modal-field {
   
   width: 448px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding-top: 40px;
+  /*padding-bottom: 40px;*/
+  
+}
+.name-modal {
+  margin-top: 12px;
 }
 .form-modal {
-  
+  position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 .form-modal label {
   margin-bottom: 4px;
 }
 .form-modal input {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  width: 448px;
+  height: 40px;
  padding-left: 12px;
  margin: 0;
  padding: 0;
-border: 1px solid rgba(33, 33, 33, 0.2);
-box-sizing: border-box;
-border-radius: 4px;
+ border: 1px solid rgba(33, 33, 33, 0.2);
+ box-sizing: border-box;
+ border-radius: 4px;
 }
 
-.form-modal:hover input {
+.form-modal input:hover {
   border: 1px solid #2196F3;
+  }
+ 
+  .label-text {
+    text-align: left;
+  }
+textarea {
+  resize: none;
 }
-
 .form-modal textarea::placeholder {
 
   
@@ -356,13 +407,26 @@ border-radius: 4px;
 }
 
 .form-icon {
+  
   display: flex;
   margin-left: 12px;
+  align-items: center;
+  justify-content: center;
   
-  fill: #000000;
-  
+  fill: rgba(33, 33, 33, 1);
+ 
 }
-
+.agree-button {
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+  color: var(--title);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: var(--accent-color);
+  cursor: pointer;
+}
 /*  Section  */
 
 .phone-text {
