--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ p {
   padding-top: 200px;
   padding-bottom: 200px;
 
-  text-align: center;
+  /*text-align: center;*/
   background-color: #2f303a;
 }
 
@@ -295,6 +295,7 @@ p {
   position: absolute;
   top: 0;
   right: 0;
+  
   display: flex;
   width: 30px;
   height: 30px;
@@ -308,8 +309,13 @@ p {
   background-size: contain;
   top: 8px;
   right: 8px;
+  transform: translateY(-15px);
   border: 0;
   cursor: pointer;
+}
+
+.icon-close:hover {
+  fill: var(--accent-color);
 }
 .form-text {
   
@@ -323,7 +329,30 @@ p {
   
   color: #212121;
 }
+.checkbox {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  position: absolute;
+}
+.check-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  background-color: transparent;
+  background: #2196F3;
+  /*border-radius: 2px;*/
+  border: 0.2px solid #FFFFFF;
+}
 
+.checkbox:checked + .check-icon {
+  background-color: var(--accent-color);
+  background-image: url(../images/check-icon.svg);
+  background-origin: content-box;
+  border-color: transparent;
+  background-size: contain;
+  background-position: center;
+}
 .agree-text {
   font-family: 'Roboto';
   font-style: normal;
@@ -332,6 +361,7 @@ p {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 agree-text::before {
   content: "";
   display: flex;
@@ -339,8 +369,7 @@ agree-text::before {
   border-color: rgba(33, 33, 33, 1);
   width: 16px;
   height: 15px;
-  
-}
+  }
 .bluetext {
   color: var(--accent-color);
   text-decoration: underline;
@@ -382,32 +411,49 @@ agree-text::before {
  border-radius: 4px;
 }
 
-.form-modal input:hover {
-  border: 1px solid #2196F3;
-  }
- 
-  .label-text {
-    text-align: left;
-  }
-textarea {
-  resize: none;
-}
-.form-modal textarea::placeholder {
 
+  .label-text {
   
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+  
+  color: #757575;
+  }
+textarea {
+  resize: none;
 }
+
+  
 .comment {
+
+  min-width: 448px;
+  min-height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-}
-
-.form-icon {
+  color: rgba(117, 117, 117, 0.5);
   
+}
+.form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.form-input:hover,
+.form-input:focus {
+  border-color: var(--accent-color);
+  }
+
+.form-input:hover .form-icon {
+fill: var(--accent-color);
+}
+.form-icon {
+  transform: translateY(-30px);
   display: flex;
   margin-left: 12px;
   align-items: center;
@@ -420,12 +466,17 @@ textarea {
   width: 200px;
   height: 50px;
   margin-top: 30px;
+  margin-left: 117px;
+  
   color: var(--title);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: var(--accent-color);
   cursor: pointer;
+}
+
+
 }
 /*  Section  */
 
