--- a/css/styles.css
+++ b/css/styles.css
@@ -309,13 +309,15 @@ p {
   background-size: contain;
   top: 8px;
   right: 8px;
-  transform: translateY(-15px);
+  
   border: 0;
-  cursor: pointer;
+  cursor: finger;
 }
 
-.icon-close:hover {
+.icon-close button:hover
+.icon-close button:focus {
   fill: var(--accent-color);
+  
 }
 .form-text {
   
@@ -334,24 +336,26 @@ p {
   -webkit-appearance: none;
   appearance: none;
   position: absolute;
+  }
+.check-text {
+  display: inline-block;
+  padding-left: 12px;
 }
 .check-icon {
   display: inline-block;
   width: 16px;
   height: 15px;
-  background-color: transparent;
-  background: #2196F3;
-  /*border-radius: 2px;*/
-  border: 0.2px solid #FFFFFF;
+  background-color: #ffffff;
+  border: 2px solid rgba(0, 0, 0, 1);
 }
 
 .checkbox:checked + .check-icon {
   background-color: var(--accent-color);
   background-image: url(../images/check-icon.svg);
   background-origin: content-box;
-  border-color: transparent;
   background-size: contain;
   background-position: center;
+  border: 0.2px solid #FFFFFF;
 }
 .agree-text {
   font-family: 'Roboto';
@@ -440,18 +444,23 @@ textarea {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: none;
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  padding-left: 42px;
 }
+.form-input:hover .form-icon,
+.form-input:focus .form-icon {
+  background: var(--accent-color);
+}
+
 .form-input:hover,
 .form-input:focus {
   border-color: var(--accent-color);
   }
 
-.form-input:hover .form-icon {
-fill: var(--accent-color);
-}
+
 .form-icon {
   transform: translateY(-30px);
   display: flex;
@@ -1071,6 +1080,11 @@ ul {
   text-transform: uppercase;
   margin-bottom: 12px;
 }
+
+.subscribe-input {
+  outline: none;
+  background-color: inherit;
+}
 .subscribe-button {
 
   display: inline-block;
@@ -1114,7 +1128,7 @@ ul {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   border-color: #e5e5e5;
-  background-color: rgba(255, 255, 255, 0.3);
+  /*background-color: rgba(255, 255, 255, 0.3);*/
 }
 
 .subscribe-form {
