--- a/css/styles.css
+++ b/css/styles.css
@@ -262,8 +262,9 @@ p {
 
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility: visible;
+  visibility visible;
 }
+
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -295,7 +296,6 @@ p {
   position: absolute;
   top: 0;
   right: 0;
-  
   display: flex;
   width: 30px;
   height: 30px;
@@ -309,13 +309,12 @@ p {
   background-size: contain;
   top: 8px;
   right: 8px;
-  
   border: 0;
   cursor: finger;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.icon-close button:hover
-.icon-close button:focus {
+.icon-close .button:hover
+.icon-close .button:focus {
   fill: var(--accent-color);
   
 }
@@ -347,6 +346,7 @@ p {
   height: 15px;
   background-color: #ffffff;
   border: 2px solid rgba(0, 0, 0, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox:checked + .check-icon {
@@ -449,6 +449,7 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
   padding-left: 42px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:hover .form-icon,
 .form-input:focus .form-icon {
@@ -485,8 +486,6 @@ textarea {
   cursor: pointer;
 }
 
-
-}
 /*  Section  */
 
 .phone-text {
