--- a/css/styles.css
+++ b/css/styles.css
@@ -316,8 +316,8 @@ p {
 .icon-close .button:hover
 .icon-close .button:focus {
   fill: var(--accent-color);
-  
-}
+  }
+
 .form-text {
   
   width: 100%;
@@ -435,9 +435,10 @@ textarea {
   min-width: 448px;
   min-height: 120px;
   padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  /*border: 1px solid rgba(33, 33, 33, 0.2);*/
   border-radius: 4px;
   color: rgba(117, 117, 117, 0.5);
+  outline: none;
 }
 
 .form-input {
@@ -451,9 +452,11 @@ textarea {
   padding-left: 42px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-input:hover .form-icon,
-.form-input:focus .form-icon {
-  background: var(--accent-color);
+
+
+.form-input:hover +.form-icon,
+.form-input:focus +.form-icon {
+  fill: var(--accent-color);
 }
 
 .form-input:hover,
